traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: ')' expected but 'return' found.
  return false
  ^TraversalByColumn:7: error: ':' expected but ')' found.
def colone(cpt) {
              ^TraversalByColumn:33: error: identifier expected but '}' found.
}
^